Add some new languages of issue 1070  clarat-org/clarat#1070

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -552,6 +552,12 @@ ar:
         wol: Wol
         zho: Zho
         zza: Zza
+        arm: 
+        dan: 
+        fil: 
+        hau: 
+        lin: 
+        mos: 
       section:
         family: Family
         refugees: Refugees
@@ -782,6 +788,12 @@ ar:
         wol: لغة ولوفية - wɔlɔf
         zho: لغة صينية - 普通话 / 普通話
         zza: لغة زازاكية - Zazaki / Kırmancki
+        arm: لغة أرمنية - Հայերեն / Hajeren
+        dan: لغة دنماركية - Dansk
+        fil: لغة فلبينية - Wikang Filipino
+        hau: لغة هوسية - Hausanci
+        lin: لغة لينغالا - Ngála
+        mos: لغة موريه - Moose
     shariff:
       share_label: مشاركة
     single_search_result:
@@ -967,12 +979,12 @@ ar:
           day_and_night: 
           free: 
         title:
-          accessibility: 
-          anonymous: 
-          charged: 
-          confidential: 
-          day_and_night: 
-          free: 
+          accessibility: خالي من العوائق مناسب للكراسي المتحركة
+          anonymous: مجهول
+          charged: ذو تكلفة
+          confidential: سري
+          day_and_night: ليلاً ونهاراً
+          free: مجاني
       trait_filters_headline: 
       website_section:
         internet_presence: أين تجد المزيد من المعلومات في النت؟
@@ -1034,7 +1046,9 @@ ar:
       anna: هي متخصصة في علم اللغة. هذا يعني أنها تعرف الكثير عن اللغات المختلفة. وهي على معرفة جيدة بالآداب. يمكنها فهم الأشياء المعقدة جيداً. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي 1009 ل.Bonobo.
       anne: درست إقتصاد وعلاقات عامة. هي سريعة جدا في التفكير المنطقي. في كلارات هي المديرة. وهي تتابع عمل الفريق بأكمله وتقوم بتنظيم كل شئ. أغنيتها المفضلة هي Denken Sie Groß  ل.Deichkind.
       astrid: خبيرة سياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع.  هي دائما مرحة وتعكس هذا على الآخرين. هي عضوة في فريق البحث لدى كلارات. أغنيتها المفضلة هي You Got Me ل. The Roots.
-      basti: مطور ويب. هذا يعني أنه على معرفة جيدة ببرمجة مواقع وصفحات الإنترنت. في كلارات هو مدير الآي تي أو تكنولوجيا المعلومات. فهو يساعدنا في المشاكل التقنية, كما يقوم بأعمال أخري تتعلق بالإجازات وعقود العمل. أغنيته المفضلة هي مان ان زا ميرور ل. مايكل جاكسون.
+      basti: |-
+        مطور ويب. هذا يعني أنه على معرفة جيدة ببرمجة مواقع وصفحات الإنترنت. في كلارات هو مدير الآي تي أو تكنولوجيا المعلومات. فهو يساعدنا في المشاكل التقنية, كما يقوم بأعمال أخري تتعلق بالإجازات وعقود العمل. أغنيته المفضلة هي Man In
+        The Mirror ل. Michael Jackson.
       bettina: بيتينا درست علوم الإدارة غير الربحية. هذه يعني أنها تعرف كيف يتم تنظيم مساعدات. هي بارعة في إنجاز العمل بشكل مرتب. في كلارات هي عضوة في الفريق البحثي؛ فهي تبحث في الإنترنت عن منظمات. أغنيتها المفضلة هي Elias ل. Dispatch.
       birte: درست علوم تربوية. هي لديها خبرة مع الأطفال. يمكنها أن تتصور نفسها في موقف الآخرين. هي عملت أيضا بوسائل إعلام. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي Borderline  ل.Madonna.
       chrissy: هي متخصصة في العلوم السياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع. هي قادرة على التخطيط والتنظيم. في كلارات هي عضوة في الفريق البحثي. وهي تبحث في الإنترنت عن منظمات. أغنيتها المفضلة هي Rough Hands  ل.Alexisonfire.
@@ -1045,34 +1059,34 @@ ar:
       esther: درست علوم ثقافية. هي تعرف التاريخ والسياسة. وتتعلم بسرعة أشياء جديدة. في كلارات هي عضوة في فريق البحث. وتختص بقاموس كلارات. أغنيتها المفضلة هي This charming man ل.The Smiths.
       fabian: درس السياسة والتاريخ. يمكنه أن يضع نفسه في مكان الآخرين. ويفهم جيداً لماذا يتصرفون بطريقة ما. في كلارات هو عضو في فريق البحث. أغنيته المفضلة هي Battery ل. Metallica.
       franziska: خبيرة في القانون الدولي. هذا يعني أنها على دراية جيدة بالقوانين التي تطبق على كل الدول. هي قادرة على فهم الأمور المعقدة جيدا وإيجاد حلول سريعة. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي Explanations ل. Selah Sue.
-      hassan: 'كان يعمل مترجماً للغة الفارسية. الفارسية هي لغته الأم. هو سريع ومنظم في عمله. في كلارات هو عضو في فريق الترجمة ويقوم بترجمة كلارات إلى اللغة الفارسية. أغنيته المفضلة هي لوكينج فور ذا سامر ل. كريس ريا. '
+      hassan: كان يعمل مترجماً للغة الفارسية. الفارسية هي لغته الأم. هو سريع ومنظم في عمله. في كلارات هو عضو في فريق الترجمة ويقوم بترجمة كلارات إلى اللغة الفارسية. أغنيته المفضلة هي Looking For The Summer ل. Chris Rea.
       heading: من وراء كلارات؟
       jacinta: درست اللغة الألمانية والفرنسية. لغتها الأم هي الإنجليزية. يمكنها الكتابة بشكل جيد وبلغة سهلة. في كلارات هي عضوة في فريق الترجمة وتقوم بترجمة كلارات إلى اللغة الإنجليزية. أغنيتها المفضلة هي Wannabe ل.Spice Girls.
-      jakob: هو متخصص في العلوم الأسيوية والأفريقية. هذا يعني أنه يعرف الكثير عن هذه القارات. هو هادئ الطباع حتى إذا كان تحت ضغط. في كلارات هو عضو في الفريق البحثي. ويقوم بالبحث في الإنترنت عن منظمات. أغنيته المفضلة هي سيمبليسيتي.
+      jakob: هو متخصص في العلوم الأسيوية والأفريقية. هذا يعني أنه يعرف الكثير عن هذه القارات. هو هادئ الطباع حتى إذا كان تحت ضغط. في كلارات هو عضو في الفريق البحثي. ويقوم بالبحث في الإنترنت عن منظمات. أغنيته المفضلة هي Simplicity لMbarga.
       janina: خبيرة في الإنتروبولوجيا الثقافية هذا يعني أنها تعرف الكتير عن الناس والثقافات. هي تكتب بشكل جيد. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة كما تساعد مستخدمي الصفحة. أغنيتها المفضلة هي MFG ل.Fanta4.
       janina_m: درست إدارة ميزانية وتعمل في كلارات كمديرة مكتبية. هي قادرة على تنظيم الأمور بشكل جيدا. في كلارات هي تعتني بشئون العاملين. وتعمل على أن كل شئ يجري بشكل صحيح. أغنيتها المفضلة هي Kinder an die Macht ل. Herbert Grönemeyer.
       janne: ياننا درست سياسة وعلاقات دولية. يمكنها تنظيم وقتها بشكل جيد. في كلارات هي عضوة في فريق البحث وهي تقرر أي العروض يصلح ان يكون من ضمن عروض كلارات. أغنيتها المفضلة هي Sweat ل. Ry X.
       jenny: هي متخصصة في العلوم الإنسانية الإجتماعية. هذا يعني أنها تعرف الكثير عن الناس والثقافات. هي تجد دائما حلولاً. في كلارات هي عضوة في الفريق البحثي. وهي تعتني بالنظام في صفحتنا على الإنترنت. أغنيتها المفضلة هي I sing I swim ل.Seabear.
-      jens: خبير تربوي. هذا يعني أنه على دراية بالتعليم. هو يفهم الأشياء المعقدة بسرعة. في كلارات هو عضو في فريق البحث ويقرر أي العروض يصلح لكلارات. أغنيته المفضلة هي تو بي تو ل. لامبشوب.
-      jule: باحثة في دراسات السلام والصراعات. هذا يعني أنها على دراية بكثير من الصراعات والحروب. هي قادرة على إيجاد حلول. في كلارات هي عضوة في فريق البحث وتتابع بشكل عام كلارات اللاجئين. أغنيتها المفضلة هي هوم لإدوارد شارب.
+      jens: خبير تربوي. هذا يعني أنه على دراية بالتعليم. هو يفهم الأشياء المعقدة بسرعة. في كلارات هو عضو في فريق البحث ويقرر أي العروض يصلح لكلارات. أغنيته المفضلة هي 2B2 ل. Lambchop.
+      jule: باحثة في دراسات السلام والصراعات. هذا يعني أنها على دراية بكثير من الصراعات والحروب. هي قادرة على إيجاد حلول. في كلارات هي عضوة في فريق البحث وتتابع بشكل عام كلارات اللاجئين. أغنيتها المفضلة هي Home Edward Sharpe.
       julia: خبيرة لغة ألمانية. هذا يعني أنها على دراية جيدة باللغة الألمانية وكتابة النصوص. يمكنها الكتابة بشكل جيد وكذلك تفسير الأمور بشكل بسيط. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة. أغنيتها المفضلة هي Reckoner ل. Radiohead.
       julia_b: درست خدمة إجتماعية. وعملت كثيراً مع الأطفال والشبان. يمكنها أن تعرف كيف يشعر الآخرون. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي Nantes ل. Beirut.
       juliane: درست إدارة أعمال وسياحة. هي قادرة على التخطيط الجيد. وهي تجد دائماً حلولاً مبدعة. في كلارات هي تقوم بالتسويق. أغنيتها المفضلة هي Easy ل.The Commodores.
-      karo: درست علوم أوروبية. هذا يعني أنها تعرف الكثير عن السياسة الأوروبية. هي قادرة على التنظيم الجيد. في كلارات هي عضوة في الفريق البحثي. وتقوم بعمل دليل كلارات. أغنيتها المفضلة هي أليف ل.بيرل جام.
+      karo: درست علوم أوروبية. هذا يعني أنها تعرف الكثير عن السياسة الأوروبية. هي قادرة على التنظيم الجيد. في كلارات هي عضوة في الفريق البحثي. وتقوم بعمل دليل كلارات. أغنيتها المفضلة هي Alive ل.Pearl Jam.
       katja: درست علوم  وأدب اللغة الألمانية. تجيد الألمانية والنصوص الصعبة. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي Mysteries ل.Beth Gibbons.
-      konstantin: مطور ويب. هذا يعني أنه يستطيع بشكل جيد أن يبرمج صفحات إنترنت. هو يجد دائما حلولا جيدة. في كلارات هو عضو في فريق الآي تي أو تكنولوجيا المعلومات ويقوم بعمل صفحات الإنترنت الخاصة بنا. أغنيته المفضلة هي توو لونج ل. دافت بونكت.
+      konstantin: مطور ويب. هذا يعني أنه يستطيع بشكل جيد أن يبرمج صفحات إنترنت. هو يجد دائما حلولا جيدة. في كلارات هو عضو في فريق الآي تي أو تكنولوجيا المعلومات ويقوم بعمل صفحات الإنترنت الخاصة بنا. أغنيته المفضلة هي Too Long ل. Daft Punk.
       laura_i: متخصصة في العلوم الثقافية والسفريات. قادرة على التنظيم الجيد. تعتني بالشكل العام ووتحب أن تتعلم أشياء جديدة. في كلارات هي عضوة في الفريق البحثي. أغنيتها المفضلة هي Proud Mary ل.Ike und Tina Turner.
       laura_w: درست أبحاث التطورات الجغرافية. هذا يعني أنها على دراية جيدة بالدول النامية. لديها دائمة نظرة عامة للأمور. في كلارات هي عضوة في فريق البحث وتعتني بمستخدمي الصفحة. أغنيتها المفضلة هي Paint It Black ل.Rolling Stones.
       lavinia: باحثة في دراسات السلام والصراعات. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. يمكنها اقناع الآخرين بأفكار ما. في كلارات هي عضوة في فريق البحث وتقوم بترتيب العروض حسب الموضوع. أغنيتها المفضلة هي I'm Not Done ل.Fever Ray.
-      line: مخرجة مسرحية. وهي أيضا على دراية جيدة بالأدب واللغة. لذلك فهي تعرف كيفية تأثير الكلمات على الناس. في كلارات هي عضوة في فريق البحث وهي مختصة بلغة كلارات. أغنيتها المفضلة هي يونيتد ل.موسي.
+      line: مخرجة مسرحية. وهي أيضا على دراية جيدة بالأدب واللغة. لذلك فهي تعرف كيفية تأثير الكلمات على الناس. في كلارات هي عضوة في فريق البحث وهي مختصة بلغة كلارات. أغنيتها المفضلة هي Unintended ل.Muse.
       lisa: مصممة إبتكارات. هي تحب التطوير عن طريق حلول أخرى مبدعة. كما يمكنها الرسم جيداً. في كلارات هي عضوة في الفريق البحثي وتتواصل مع مستخدمي الصفحة. وتبحث لتكتشف من يستخدم كلارات. أغنيتها المفضلة هي Resolution ل.Matt Corby.
       magdalena: 'درست مجالات مختلفة من دراسات أمريكا اللاتينية. هذا يعني أنها تعرف الكثير عن الثقافة والسياسة في أمريكا اللاتينية. هي قادرة على التخطيط والتنظيم في العمل. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Summer Breeze ل. CocoRosie.  '
-      marcus: مصمم ويب. هذا يعني أنه يستطيع برمجة صفحات الإنترنت والشكل العام للصفحة. هو أيضا واضع خطط جيد. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. ويعتني بجعل صفحات الإنترنت الخاصة بنا تبدو في شكل جيد. أغنيته المفضلة هي هيستيريا ل. موسي
+      marcus: مصمم ويب. هذا يعني أنه يستطيع برمجة صفحات الإنترنت والشكل العام للصفحة. هو أيضا واضع خطط جيد. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. ويعتني بجعل صفحات الإنترنت الخاصة بنا تبدو في شكل جيد. أغنيته المفضلة هي Hysteria ل. MUSE
       marie: باحثة في مجال السلام والصراع. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. هي قادرة على تجميع المعلومات وترتيبها بشكل سريع. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Move On Up ل. Curtis Mayfield..
       michaela: درست نظم معلومات اقتصادية. يمكنها أن تحمس الناس لشئ ما. وهي تعرف وسائل الإتصال الحديثة جيداً. في كلارات هي عضوة في الفريق البحثي. وتعتني بأن صفحتنا على الإنترنت تعمل بشكل جيد. أغنيتها المفضلة هي Digital Love ل.Daft Punk.
       nahla: 'متخصصة في علم الآثار. تعرف الكثير عن تاريخ البشر. يمكنها العمل جيداً وبسرعة. في كلارات هي عضوة بفريق الترجمة وتقوم بترجمة كلارات إلى اللغة العربية. أغنيتها المفضلة هي نسم علينا الهوى لفيروز. '
       nathalie: درست حقوق الإنسان وسياسة دولية. قادرة على شرح الأمور جيداً. وهي مستمعة جيدة. في كلارات هي عضوة بالفريق البحثي. أغنيتها المفضلة هي Me in You ل.Convenience.
-      nils: خبير في الكمبيوتر والمعلومات. هذا يعني أنه يستطيع برمجة الكمبيوتر وصفحات الإنترنت. لديه دائما حل جيد كما انه يتعلم بسرعة. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. أغنيته المفضلة هي يين ل. فييتس بروت.
+      nils: خبير في الكمبيوتر والمعلومات. هذا يعني أنه يستطيع برمجة الكمبيوتر وصفحات الإنترنت. لديه دائما حل جيد كما انه يتعلم بسرعة. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. أغنيته المفضلة هي Jein ل. Fettes Brot.
       omar: درس علوم الكمبيوتر. يمكنه برمجة صفحات الإنترنت بشكل جيداً وفهم الأشياء المعقدة بسرعة. في كلارات هو عضو بفريق تكنولوجيا المعلومات آي تي. أغنيته المفضلة هي Nothing Else Matters ل. Metallica.
       patrick: 'درس التاريخ والسياسة. هو يعرف الكثير خاصة عن دولة جاميكا. هو قادر على فهم الأشياء المعقدة بسرعة. في كلارات هو عضو في فريق البحث. أغنيته المفضلة هي Kingston Be Wise ل. Protoje   '
       philipp: درس التاريخ والسياسة والحقوق. يعرف الكثير عن السياسة والمجتمع. يمكنه فهم الأشياء المعقدة. في كلارات هو عضو بالفريق البحثي. أغنيته المفضلة هي This Is Our Science ل. Astronautalis.
