--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -613,6 +613,12 @@ en:
         wol: Wol
         zho: Zho
         zza: Zza
+        arm: 
+        dan: 
+        fil: 
+        hau: 
+        lin: 
+        mos: 
       section:
         family: Family
         refugees: Refugees
@@ -839,6 +845,12 @@ en:
         wol: Wolof - wɔlɔf
         zho: Chinese - 普通话 / 普通話
         zza: Zaza - Zazaki / Kırmancki
+        arm: Armenian - Հայերեն / Hajeren
+        dan: Danish - Dansk
+        fil: Filipino - Wikang Filipino
+        hau: Hausa - Hausanci
+        lin: Lingala - Ngála
+        mos: Mossi - Mòoré
     shariff:
       share_label: Share
     single_search_result:
@@ -1018,12 +1030,12 @@ en:
           day_and_night: 
           free: 
         title:
-          accessibility: accessible
-          anonymous: anonym
-          charged: with costs
+          accessibility: disabled and pushchair access
+          anonymous: anonymous
+          charged: for a fee
           confidential: confidential
-          day_and_night: 24/7
-          free: free
+          day_and_night: day and night
+          free: free of charge
       trait_filters_headline: Additional information
       website_section:
         internet_presence: Where can you get more information online?
