--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -40,12 +40,7 @@ fa:
       section_1:
         heading: چه کسی٬ چگونه٬ چه چیزی؟
         question_1:
-          answer: |-
-            clarat دروازه ای است که در آن می توان پیشنهادهایی جهت حمایت پیدا کرد.ما تو را در پیدا کردن کمک همراهی می کنیم اما مشاوره نمی دهیم.به همین منظور کارشناسانی هستند که دقیقآ می توانی از طریق ما آنها را پیدا کنی.clarat به دو بخش b>clarat
-            family</b> و <b>clarat refugees</b>: تقسیم می شود.<b>clarat family</b> به کودکان٬ خانواده و جوانان که در نزدیکی محل سکونت خود احتیاج به حمایت دارند کمک می کند.در اینجا به راحتی برای خود٬ خانواده و دوستان کمک پیدا می کنی.حتی برای کودکان٬ جوانان و خانواده های دیگری که تو می شناسی.کاری که clarat
-            family انجام می دهد را می توانی در این لینک %{link_to_family_movie} مشاهده کنی.</li>
-            <li>
-            <b>clarat refugees</b> به پناهندگانی که در نزدیکی محل سکونت خود به دنبال حمایت هستند کمک می کند.در اینجا نه تنها به تو یا خانواده تو و یا به دوستانت بلکه حتی اگر پناهنده نباشی ولی پناهندگانی را که می شناسی که احتیاج به حمایت دارند نیز کمک می شود.
+          answer: "clarat دروازه ای است که در آن می توان پیشنهادهایی جهت حمایت پیدا کرد.ما تو را در پیدا کردن کمک همراهی می کنیم اما مشاوره نمی دهیم.به همین منظور کارشناسانی هستند که دقیقآ می توانی از طریق ما آنها را پیدا کنی.clarat به دو بخش \n <b>clarat family</b> و  <b>clarat refugees</b>: تقسیم می شود.<b>clarat family</b> به کودکان، خانواده و جوانان که در نزدیکی محل سکونت خود احتیاج به حمایت دارند کمک می کند.در اینجا به راحتی برای خود، خانواده و دوستان کمک پیدا می کنی.حتی برای کودکان، جوانان و خانواده های دیگری که تو می شناسی.خدماتی که clarat\nfamily ارائه می دهد را می توانی در این لینک %{link_to_family_movie} مشاهده کنی.</li>\n<li>\n<b>clarat refugees</b> به پناهندگانی که در نزدیکی محل سکونت خود به دنبال حمایت هستند کمک می کند.در اینجا نه تنها به تو، خانواده تو و یا به دوستانت، بلکه حتی اگر پناهنده نباشی ولی پناهندگانی را که می شناسی که احتیاج به حمایت دارند، نیز کمک می شود."
           link_1:
             name: فیلم
             target: _blank
@@ -614,6 +609,12 @@ fa:
         wol: Wol
         zho: Zho
         zza: Zza
+        arm: 
+        dan: 
+        fil: 
+        hau: 
+        lin: 
+        mos: 
       section:
         family: خانواده
         refugees: پناهندگان
@@ -854,6 +855,12 @@ fa:
         wol: ولفی - wɔlɔf
         zho: چینی - 普通话 / 普通話
         zza: دیملی -  Zazaki / Kırmancki
+        arm: زبان ارمنی - Հայերեն / Hajeren
+        dan: زبان دانمارکی - Dansk
+        fil: زبان فیلیپینی - Wikang Filipino
+        hau: هوسى - Hausanci
+        lin: زبان لينغالا - Ngála
+        mos: Mossi - Moose
     shariff:
       share_label: تقسیم کردن
     single_search_result:
