--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,8 @@ en:
         email: NOTRANSLATE
         message: NOTRANSLATE
         name: NOTRANSLATE
+      offer:
+        organizations: 
       search_location:
         latitude: NOTRANSLATE
         longitude: NOTRANSLATE
@@ -539,6 +541,7 @@ en:
         amh: Amh
         ara: Ara
         arc: Arc
+        arm: 
         aze: Aze
         bam: Bam
         ban: Ban
@@ -552,15 +555,18 @@ en:
         cpe: Cpe
         cus: Cus
         cze: Cze
+        dan: 
         deu: Deu
         dyu: Dyu
         ell: Ell
         eng: Eng
         ewo: Ewo
         fas: Fas
+        fil: 
         fin: Fin
         fra: Fra
         fuf: Fuf
+        hau: 
         hbs: Hbs
         heb: Heb
         hin: Hin
@@ -572,11 +578,13 @@ en:
         kor: Kor
         kur: Kur
         lav: Lav
+        lin: 
         lit: Lit
         ltz: Ltz
         luo: Luo
         man: Man
         mkd: Mkd
+        mos: 
         msa: Msa
         mul: Mul
         nor: Nor
@@ -613,12 +621,6 @@ en:
         wol: Wol
         zho: Zho
         zza: Zza
-        arm: 
-        dan: 
-        fil: 
-        hau: 
-        lin: 
-        mos: 
       section:
         family: Family
         refugees: Refugees
@@ -771,6 +773,7 @@ en:
         amh: Amharic - አማርኛ
         ara: Arabic - عربي
         arc: Aramaic - ארמית / Arāmît
+        arm: Armenian - Հայերեն / Hajeren
         aze: Azerbaijani - Azərbaycan
         bam: Bambara - Bamanankan
         ban: Balinese - Basa Bali
@@ -784,15 +787,18 @@ en:
         cpe: Kamtok - Pidgin
         cus: Saho - ሳሆኛ
         cze: Czech - čeština
+        dan: Danish - Dansk
         deu: German - Deutsch
         dyu: Jula - Julakan
         ell: Greek - ελληνικά
         eng: English
         ewo: Ewondo / Kolo - Ewondo
         fas: Persian (Farsi) - فارسی
+        fil: Filipino - Wikang Filipino
         fin: Finnish - suomi
         fra: French - Français
         fuf: Pular - Pular
+        hau: Hausa - Hausanci
         hbs: Montenegrin - Crnogorski jezik / Црногорски језик
         heb: Hebrew - עברית
         hin: Hindi - हिन्दी
@@ -804,11 +810,13 @@ en:
         kor: Korean - 한국말 / 조선말
         kur: Kurdish - کوردی
         lav: Latvian - latviešu
+        lin: Lingala - Ngála
         lit: Lithuanian - lietuvių
         ltz: Luxembourgish - Lëtzebuergesch
         luo: Luo - Dholuo
         man: Maninka - Maninka
         mkd: Macedonian - македонски
+        mos: Mossi - Mòoré
         msa: Malay – بهاس ملايو
         mul: more languages upon request
         nor: Norwegian - Norsk
@@ -845,12 +853,6 @@ en:
         wol: Wolof - wɔlɔf
         zho: Chinese - 普通话 / 普通話
         zza: Zaza - Zazaki / Kırmancki
-        arm: Armenian - Հայերեն / Hajeren
-        dan: Danish - Dansk
-        fil: Filipino - Wikang Filipino
-        hau: Hausa - Hausanci
-        lin: Lingala - Ngála
-        mos: Mossi - Mòoré
     shariff:
       share_label: Share
     single_search_result:
@@ -900,7 +902,7 @@ en:
           If you are interested, please enter your email and we will reach out
           to you once as soon as that is the case.
       nav_lang:
-        legal_title: On clarat, legal text can only be read in German.
+        legal_title: On, legal text can only be read in German.
         title: |-
           Automated translations!
           <br><br>
@@ -939,6 +941,8 @@ en:
       target_audience:
         family_acquaintances: 
         refugees_adolescents: 
+    validations:
+      only_visible_organizations: 
   offers:
     index:
       filters:
@@ -1035,6 +1039,9 @@ en:
           charged: for a fee
           confidential: confidential
           day_and_night: day and night
+          family_nuclear_family: 
+          family_parents: 
+          family_relatives: 
           free: free of charge
       trait_filters_headline: Additional information
       website_section:
